src/components/hoverImage/HoverImage.css
.hover-image-container {
    position: relative;
    width: 45vw;
    height: 45vw;
    overflow: hidden;
}

.hover-image {
    position: absolute;
    width: 45vw;
    height: 45vw;
    object-fit: cover;
}

.hover-image--hover {
    position: absolute;
    opacity: 0;
    transition: opacity 0.1s ease-in-out;
    z-index: 10;
}

.hover-image--hover:hover {
    opacity: 1;
}

.hover-image--hover:target{
    opacity: 1;
}



@media (min-width: 768px) {
    .hover-image-container {
        width: 300px;
        height: 300px;
    }

    .hover-image, .hover-image--hover {
        width: 300px;
        height: 300px;
    }

    .hover-image__title {
        position: absolute;
        bottom: 0px;
        left: 10px;
        color: var(--colour-primary);
        font-family: var(--font-secondary);
        padding: 5px 10px;
        background-color: var(--colour-primary-text);
        z-index: 20;
    }
}

